--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <script>
-        const images = ['images/skibidi.png', 'images/guesty.png', 'images/gyat.webp'];
+        const images = ['images/skibidi.png', 'images/guesty.png', 'images/gyat.webp', 'images/slient.png'];
         let currentIndex = 0;
 
         function updateImage() {
